--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "page_analyzer"}]
 python = "^3.10"
 flask = "^3.0.0"
 gunicorn = "^21.2.0"
+python-dotenv = "^1.0.0"
+jinja2 = "^3.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
