--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ jinja2 = "^3.1.2"
 psycopg2-binary = "^2.9.9"
 validators = "^0.22.0"
 requests = "^2.31.0"
+beautifulsoup4 = "^4.12.2"
 
 
 [tool.poetry.group.dev.dependencies]
