--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - .env
     depends_on:
       - db
+      - redis
     command: sh -c "poetry run gunicorn -w 5 -b 0.0.0.0:8000 page_analyzer:app"
 
   db:
@@ -25,3 +26,38 @@ services:
       - ./database.sql:/docker-entrypoint-initdb.d/database.sql
     env_file:
       - .env
+
+  redis:
+    image: redis:5.0.5
+    container_name: redis
+    ports:
+        - '6333:6379'
+
+  celery:
+    container_name: celery
+    build: .
+    env_file:
+      - .env
+    command: "celery -A page_analyzer.celery_config.celery_app worker --loglevel=info"
+    links:
+      - redis
+    depends_on:
+      - redis
+      - db
+    volumes:
+        - ./celery/app:/app
+
+  celery_beat:
+    container_name: celery_beat
+    build: .
+    env_file:
+      - .env
+    command: "celery -A page_analyzer.celery_config.celery_app beat --loglevel=info"
+    links:
+      - redis
+    depends_on:
+      - redis
+      - db
+    volumes:
+        - ./celery/app:/app
+
