--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,17 +30,14 @@ services:
   redis:
     image: redis:5.0.5
     container_name: redis
-    ports:
-        - '6333:6379'
 
   celery:
     container_name: celery
+    user: nobody
     build: .
     env_file:
       - .env
     command: "celery -A page_analyzer.celery_config.celery_app worker --loglevel=info"
-    links:
-      - redis
     depends_on:
       - redis
       - db
@@ -53,11 +50,8 @@ services:
     env_file:
       - .env
     command: "celery -A page_analyzer.celery_config.celery_app beat --loglevel=info"
-    links:
-      - redis
     depends_on:
       - redis
       - db
     volumes:
         - ./celery/app:/app
-
